Fixed main weather-card on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,11 @@
 .search .follow-city-btn {
   margin: 1rem;
 }
+
+@media (max-width: 575px) {
+  .buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
