--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -2,7 +2,7 @@
 
 .sidebar {
   position: absolute;
-  width: 250px;
+  width: 350px;
 
   right: 0;
   min-height: 100%;
@@ -25,7 +25,7 @@
 
 .sidebar.hidden {
   opacity: 0;
-  right: -250px;
+  right: -350px;
 }
 
 .sidebar-card {
@@ -75,4 +75,32 @@
 .sidebar-card .right span {
   font-size: 1.2rem;
   color: var(--text-lightgray);
+}
+
+@media (max-width: 1300px) {
+  .sidebar {
+    width: 300px;
+  }
+  .sidebar.hidden {
+    right: -300px;
+  }
+}
+
+@media (max-width: 1000px) {
+  .sidebar {
+    width: 250px;
+  }
+  .sidebar.hidden {
+    right: -250px;
+  }
+}
+
+@media (max-width: 500px) {
+  .sidebar {
+    width: 100vw;
+    padding-top: 2rem;
+  }
+  .sidebar.hidden {
+    right: -100vw;
+  }
 }
