--- a/src/components/WeatherCard/WeatherCard.css
+++ b/src/components/WeatherCard/WeatherCard.css
@@ -6,9 +6,7 @@
   flex-direction: column;
   margin: 0 auto;
   margin-top: 1rem;
-  /* border: 1px solid #777; */
-  /* box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1); */
-  /* box-shadow: 0px 10px 15px 7px rgba(0, 0, 0, 0.1); */
+
   box-shadow: 0px 10px 34px 4px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   padding: 1.5rem;
@@ -21,13 +19,18 @@
 }
 
 .weather-today {
-  display: flex;
+  /* display: flex;
   align-content: center;
-  justify-content: space-between;
+  justify-content: space-between; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  margin: 0 2rem;
 }
 
 .weather-today .condition {
   text-align: center;
+  /* align-self: start; */
+  margin-right: auto;
 }
 
 .weather-today .condition img {
@@ -61,4 +64,32 @@
   align-self: center;
   color: var(--text-lightgray);
   font-size: 0.8rem;
+  margin-left: auto;
+}
+
+@media (max-width: 700px) {
+  .weather-today {
+    margin: 0 1rem;
+  }
+}
+
+@media (max-width: 550px) {
+  .weather-today {
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 1fr 1fr;
+  }
+
+  .weather-card .weather {
+    grid-column: 2 / 5;
+  }
+  .weather-card .condition {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    margin: 0 auto;
+  }
+  .weather-card .extra-info {
+    grid-row: 2 / 3;
+    grid-column: 4 / 6;
+    margin: 0 auto;
+  }
 }
